# fbx-tree-view

./: Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md
src/: fbx.rs  logs.rs  main.rs  widgets.rs
src/fbx/: attribute.rs
src/widgets/: attribute_table.rs  logs.rs  node_tree.rs
