[package]
name = "fbx-tree-view"
version = "0.1.0"
authors = ["Takuma YOSHIOKA <lo48576@hard-wi.red>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "GUI viewer of FBX tree structure"

[dependencies]
fbxcel = "0.1.0"
gdk = "0.9.0"

[dependencies.gtk]
version = "0.5.0"
features = ["v3_16"]
