[package]
name = "fbx-tree-view"
version = "0.1.2"
authors = ["Takuma YOSHIOKA <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "GUI viewer of FBX tree structure"

[dependencies]
fbxcel = "0.6"
gdk = "0.12"
glib = "0.9.1"

[dependencies.gtk]
version = "0.8"
features = ["v3_16"]
